Set correct value of numeric scores when saving throws

--- a/views/match.pug
+++ b/views/match.pug
@@ -46,7 +46,7 @@ block scripts
 				}
 				dart.text(multiplierText);
 
-				dart.attr('data-score', $(this).attr('title')) / multiplier;
+				dart.attr('data-score', $(this).attr('title') / multiplier);
 				dart.attr('data-multiplier', multiplier);
 
 				var submitButton = $('#submitScoreButton');
