--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html
 		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa' crossorigin='anonymous')
 		script(src='/js/frontendHelpers.js')
 		script(src='/js/fastclick.js')
+		script(src='/js/webgl-heatmap.js')
 		link(rel='stylesheet', href='/css/site.css')
 		block scripts
 	body
