Fixed styling of player list in matches view and added fixing scores

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,7 +31,7 @@ block content
 						label(for='matchTypeSelect') Starting Score
 						select(class='form-control' name='matchType' id='matchTypeSelect')
 							option 301
-							option 501
+							option(selected='selected') 501
 							option 701
 
 					div(class='form-group')
