--- a/views/playerStatistics.pug
+++ b/views/playerStatistics.pug
@@ -26,7 +26,7 @@ block content
 						td
 							p= player.ppd.toFixed(2)
 						td 
-							p= player.highScores['60+'] == 0 ? "" : "60+: " + player.highScores['60+']
-							p= player.highScores['100+'] == 0 ? "" : "100+: " + player.highScores['100+']
-							p= player.highScores['140+'] == 0 ? "" : "140+: " + player.highScores['140+']
-							p= player.highScores['180'] == 0 ? "" : "180:  " + player.highScores['180']
+							p= player['60+'] == 0 ? "" : "60+: " + player['60+']
+							p= player['100+'] == 0 ? "" : "100+: " + player['100+']
+							p= player['140+'] == 0 ? "" : "140+: " + player['140+']
+							p= player['180s'] == 0 ? "" : "180:  " + player['180s']
