--- a/views/playerComparison.pug
+++ b/views/playerComparison.pug
@@ -34,7 +34,7 @@ block content
 				tr
 					td(class='col-sm-2') Checkout%
 					each player in players
-						td TODO
+						td= (player.gamesWon * 100 / player.checkoutAttempts).toFixed(2) + '%'
 				tr
 					td(class='col-sm-2') Highest Checkout
 					each player in players
