--- a/views/matches.pug
+++ b/views/matches.pug
@@ -18,7 +18,7 @@ block content
 
 	// TODO Add pagination to this table to limit number of matches displayed
 	div(class='table-responsive')
-		table(class='table table-striped table-bordered' id='matches-list')
+		table(class='table table-striped table-bordered' id='matches_list_table')
 			thead
 				tr
 					th Start Time
@@ -32,21 +32,21 @@ block content
 				each match in matches
 					tr
 						th(hidden='true' scope='row')= match.id
-						td= match.created_at
-						td= match.end_time === undefined ? '' : match.end_time
-						td(class='txt-center')= match.starting_score
-						td
+						td(class='col-sm-2')= match.created_at
+						td(class='col-sm-2')= match.end_time === undefined ? '' : match.end_time
+						td(class='col-sm-2 txt-center')= match.starting_score
+						td(class='col-sm-1')
 						if match.is_finished
-							td
-								div
-									span(class='label label-success' style='line-height: inherit;')=players[match.winner_id].name
+							td(class='col-sm-1')
+								div: span(class='label label-success' style='line-height: inherit;')=players[match.winner_id].name
 						else
 							td(class='txt-center') -
-						td
+						td(class='col-sm-1')
 							each player in match.players
 								div(style='margin-bottom: 5px;')
 									span(class='label label-info' style='line-height: inherit;')=player.name
-						if !match.is_finished
-							td: button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
-						else
-							td: button(type='button' class='btn btn-primary btn-block btn-view-results') View
+						td(class='col-sm-2')
+							if !match.is_finished
+								button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
+							else
+								button(type='button' class='btn btn-primary btn-block btn-view-results') View
