--- a/views/matches.pug
+++ b/views/matches.pug
@@ -24,7 +24,7 @@ block content
 					th Start Time
 					th End Time
 					th Game Type
-					th Stake
+					//th Stake
 					th Winner
 					th Players
 					th Results
@@ -35,7 +35,7 @@ block content
 						td(class='col-sm-2')= match.created_at
 						td(class='col-sm-2')= match.end_time === undefined ? '' : match.end_time
 						td(class='col-sm-2 txt-center')= match.starting_score
-						td(class='col-sm-1')
+						//td(class='col-sm-1')
 						if match.is_finished
 							td(class='col-sm-1')
 								div: span(class='label label-success' style='line-height: inherit;')=players[match.winner_id].name
